crates/toride-mise/tests/snapshots/fixtures__outdated_basic_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
{
  "node": {
    "current": "22.0.0",
    "latest": "22.1.0",
    "requested": "22"
  }
}
