crates/toride-mise/tests/snapshots/fixtures__registry_basic.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: tools
---
[
    RegistryToolEntry {
        name: Some(
            "node",
        ),
        description: Some(
            "Node.js",
        ),
        backend: Some(
            "core",
        ),
        full_name: None,
        aliases: None,
    },
]
