crates/toride-mise/tests/snapshots/fixtures__registry_basic_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
[
  {
    "backend": "core",
    "description": "Node.js",
    "name": "node"
  }
]
