crates/toride-mise/tests/snapshots/fixtures__registry_security_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
[
  {
    "backend": "core",
    "full_name": "core,node",
    "name": "node",
    "security": {
      "verified": true
    }
  }
]
