crates/toride-mise/tests/snapshots/fixtures__settings_all.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: settings
---
{
    "jobs": SettingsExtendedEntry {
        value: Some(
            Number(4),
        ),
        source: Some(
            "~/.config/mise/config.toml",
        ),
    },
}
