crates/toride-mise/tests/snapshots/fixtures__settings_all_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
{
  "jobs": {
    "source": "~/.config/mise/config.toml",
    "value": 4
  }
}
